--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
     "faker": "5.1.0",
     "randomcolor": "0.6.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-organizational-chart": "1.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
